# lifegamecpp

./: .clang-format  CMakeLists.txt  README.md  camera.cpp  camera.h  common.cpp  common.h  lifegame.cpp  lifegame.h  main.cpp  mainwindow.cpp  mainwindow.h  toolbar.cpp  toolbar.h
data/roboto-android/: LICENSE.rsrc
patterns/: Acorn.txt  Clock.txt  Clock2.txt  Diehard.txt  Glider.txt  GliderGun.txt  Pentadecathlon.txt  Pixel.txt  Pulsar.txt  R-pentomino.txt  Shuttle.txt
